# nextjs-fastapi-rag

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOCKER_FIX.md  Makefile  README.md  docker-compose.yml  execution_plan.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/prompts/: README.md  query_expansion.txt.example  system_prompt.txt.example
data/: README.md
data/config/: sources.yaml.example  stopwords.json
data/examples/: 01_simple_pdf.py  02_multiple_formats.py  03_audio_transcription.py  04_hybrid_chunking.py  example_golden_dataset.csv
data/examples/output/: output_chunks.txt  (+5 more)
data/prompts/: README.md  query_expansion.txt  system_prompt.txt  system_prompt.txt.example
deploy/: Dockerfile  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: README.md  TROUBLESHOOT.md  api-reference.md  api-versioning.md  architecture.md  project-structure.md  quickstart.md
docs/design/: restart-script-design.md
documents/: README.md
scripts/: analyze_threshold.py  check_similarity_scores.py  evaluate_rag.py  restart-servers.sh  scrape.py  test-docker-build.sh  test-sse.html  test_osiris_tool.py
services/api/: README.md  requirements.txt
services/web/: README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
sql/: schema.sql
tests/: TEST_SUMMARY_PAGE_NUMBERS.md  __init__.py  benchmark_search.py  conftest.py  golden_dataset.csv  test_api.py  test_api_integration.py  test_cache.py  test_chunker.py
tests/integration/: test_api_integration.py  test_page_number_pipeline.py
(+56 files in other folders)
