[project]
name = "nextjs-fastapi-rag"
version = "0.1.0"
description = "Full-stack RAG application with Next.js frontend and FastAPI backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic-ai>=0.7.4",
    "asyncpg>=0.30.0",
    "openai>=1.0.0",
    "docling>=2.55.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]
exclude = ["archives*", "documents*", "sql*", "tests*", "data*"]

[project.scripts]
rag-agent = "packages.core.agent:main"
rag-cli = "packages.core.cli:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "unit: Fast isolated tests (no external dependencies)",
    "integration: Tests requiring database or external services",
    "slow: Tests taking >5 seconds",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
